DHUB-2683 - Ondersteuning voor graphql queries op interfaces voor PostgreSQL. (#826)
* WIP - DHUB-2683 - Initiele aanpassingen voor queries op interfaces.

* WIP: DHUB-2683 - Build a json object when using a union all of unknown columns on all sides.

* WIP DHUB-2683 - nested json objects will now start with their proper name instead of 'json_object'

* DHUB-2683 - graphql returns data and only selects the requested scalar fields of an object instead of all.

* WIP - DHUB-2683 - filtering op de koppel tabel toegevoegd.

* WIP DHUB-2683 - Batch gedeelte geïsoleerd van de join.

* WIP DHUB-2683 - Start van de eerste unittests weer succesvol maken..

* WIP DHUB-2683 - Refactor i.v.m. unittests en nieuwe functionaliteit..

* WIP DHUB-2683 - Unittests slagend gemaakt met behoud van nieuwe functionaliteit..

* WIP DHUB-2683 - Code smells opgeruimd op een paar TODO's na.

* WIP DHUB-2683 - Code smell opgeruimd.

* WIP DHUB-2683 - Code coverage verhoogd..

* WIP fix single item requests, er zijn nog falende unittests, vandaar WIP

* Unittests weer werkend gemaakt en een single 'node' ref query laten slagen.

* Columname generatie impact beperkt tot het gebruik van een json column en objectfields die niet van de parent object request zijn worden nu er uit gefiltered in het objectrequest.

* Implemented logic te retrieve a single object based on the interfacetype.

* Trying to fix test difference on github and local.

* Trying to fix test difference on github and local.

* Forgot to delete unused import.

* Cleaned code up..

* Code coverage verhoogd.

* Codestyle fout opgelost.

* Feedback verwerkt en code opgeschoond.

* Refactor logica uit PG Backend Loader en grote methodes verkleind.

* Cyclische detection added for when an object is referencing itself, this would cause an stackoverflow otherwise.

* Feedback verwerkt.

* BatchQuery kan nu een Single of een Union zijn.