@@ -6,12 +6,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.dotwebstack.framework.backend.rdf4j.model.Rdf4jObjectField;
 import org.dotwebstack.framework.backend.rdf4j.model.Rdf4jObjectType;
 import org.dotwebstack.framework.backend.rdf4j.shacl.NodeShape;
 import org.dotwebstack.framework.backend.rdf4j.shacl.PropertyShape;
-import org.dotwebstack.framework.core.query.model.ObjectRequest;
+import org.dotwebstack.framework.core.query.model.SingleObjectRequest;
 import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.vocabulary.RDF;
 import org.eclipse.rdf4j.model.vocabulary.RDFS;
@@ -29,7 +28,7 @@ class QueryHelper {
     return nodeShape.getClasses()
         .stream()
         .map(classes -> createTypePattern(subject, type, classes))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private static GraphPattern createTypePattern(Variable subject, Variable type, Set<IRI> classes) {
@@ -51,7 +50,7 @@ class QueryHelper {
     return minCount == 0 ? graphPattern.optional() : graphPattern;
   }
 
-  public static Rdf4jObjectField getObjectField(ObjectRequest objectRequest, String name) {
+  public static Rdf4jObjectField getObjectField(SingleObjectRequest objectRequest, String name) {
     var objectType = objectRequest.getObjectType();
 
     if (!(objectType instanceof Rdf4jObjectType)) {
